<resources>
    <string name="app_name">工作来</string>
    <string name="setting">设置</string>
    <string name="add_menu">添加</string>
    <string name="title_activity_modify_actity">ModifyActity</string>
    <string name="title_activity_home_acitivity">HomeAcitivity</string>
    <string name="action_settings">Settings</string>

    <string name="wechat">微信</string>
    <string name="contactList">通讯录</string>
    <string name="find">发现</string>
    <string name="profile">我</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_contact_province_acivity">ContactProvinceAcivity</string>
    <string name="title_activity_acitivity_main_one">AcitivityMainOne</string>

    <!--login Activity-->
    <string name="login_name">账户</string>
    <string name="login_password">密码</string>
    <string name="login">登陆</string>
    <string name="title_activity_label_flow">LabelFlowActivity</string>
    <string name="title_activity_on_measure_test">OnMeasureTestActivity</string>
    <string name="title_activity_advertisement">AdvertisementActivity</string>

    <string name="help">帮助</string>
    <string name="avatar">头像</string>
    <string name="nick_name">昵称</string>
    <string name="e_mail">邮箱</string>
    <string name="telphone">手机</string>
    <string name="my_collection">我收藏的</string>
    <string name="quit_user">用户退出</string>
</resources>
