<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/common_padding_middle"
    android:paddingRight="@dimen/common_padding_middle"
    tools:context="com.zsl.myapplication.login.LoginActivity">
    <ImageView
        android:id="@+id/logo_image"
        android:layout_height="200dp"
        android:layout_width="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:id="@+id/name_label"
        android:layout_height="40dp"
        android:layout_width="wrap_content"
        style="@style/login_label_text_style"
        android:text="@string/login_name"
        android:layout_below="@+id/logo_image"
        />
    <com.zsl.myapplication.common.widget.UnderLineEditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_toRightOf="@+id/name_label"
        android:layout_below="@+id/logo_image"
        android:layout_alignBottom="@+id/name_label"
        android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:gravity="bottom"
        android:background="@null"
        android:singleLine="true"
        />

    <TextView
        android:id="@+id/password_label"
        android:layout_height="40dp"
        android:layout_width="wrap_content"
        style="@style/login_label_text_style"
        android:text="@string/login_password"
        android:layout_below="@+id/name_label"
        />
    <com.zsl.myapplication.common.widget.UnderLineEditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_toRightOf="@+id/password_label"
        android:layout_below="@+id/name_input"
        android:password="true"
        android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:singleLine="true"
        android:gravity="bottom"
        android:background="@null"
        android:layout_alignBottom="@+id/password_label"/>
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_button_height"
        style="@style/main_button_style"
        android:text="@string/login"
        android:layout_below="@+id/password_label"
        android:layout_marginTop="12dp"
        />
    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        />
</RelativeLayout>
